--- a/plugins/themes/default/locale/es_ES/locale.xml
+++ b/plugins/themes/default/locale/es_ES/locale.xml
@@ -22,7 +22,7 @@ Elija una combinación de fuentes que se adapte a esta revista.</message>
   <message key="plugins.themes.default.option.typography.notoSans">
 Noto Sans: Fuentes digitales nativa diseñado por Google para un amplio soporte multilingüe.</message>
   <message key="plugins.themes.default.option.typography.notoSerif">Noto Serif: Un tipo variante de Serif de las fuentes digitales nativas de Google.</message>
-  <message key="plugins.themes.default.option.typography.notoSerif_notoSans"> </message>
+  <message key="plugins.themes.default.option.typography.notoSerif_notoSans">Noto Serif/Noto Sans: A complementary pairing with serif headings and sans-serif body text. </message>
   <message key="plugins.themes.default.option.typography.notoSans_notoSerif"> Noto Serif / Sans Noto: Un emparejamiento complementario con las partidas del trazo de pie y cuerpo de texto de sans serif.</message>
   <message key="plugins.themes.default.option.typography.lato">Lato: Fuente sans-serif popular y moderna.</message>
   <message key="plugins.themes.default.option.typography.lora">Lora: Amplio set de serif, buena fuente para la lectura en línea.</message>
